src/ffi.rs

    pub fn HPDF_SetPagesConfiguration(pdf: HPDF_Doc,
                                      page_per_pages: HPDF_UINT)
     -> HPDF_STATUS;
    pub fn HPDF_GetPageByIndex(pdf: HPDF_Doc, index: HPDF_UINT) -> HPDF_Page;
    pub fn HPDF_GetPageMMgr(page: HPDF_Page) -> HPDF_MMgr;
    pub fn HPDF_GetPageLayout(pdf: HPDF_Doc) -> HPDF_PageLayout;
    pub fn HPDF_SetPageLayout(pdf: HPDF_Doc, layout: HPDF_PageLayout)
     -> HPDF_STATUS;
    pub fn HPDF_GetPageMode(pdf: HPDF_Doc) -> HPDF_PageMode;
    pub fn HPDF_SetPageMode(pdf: HPDF_Doc, mode: HPDF_PageMode)
     -> HPDF_STATUS;
    pub fn HPDF_GetViewerPreference(pdf: HPDF_Doc) -> HPDF_UINT;
    pub fn HPDF_SetViewerPreference(pdf: HPDF_Doc, value: HPDF_UINT)
     -> HPDF_STATUS;
    pub fn HPDF_SetOpenAction(pdf: HPDF_Doc, open_action: HPDF_Destination)
     -> HPDF_STATUS;
    pub fn HPDF_GetCurrentPage(pdf: HPDF_Doc) -> HPDF_Page;
    pub fn HPDF_AddPage(pdf: HPDF_Doc) -> HPDF_Page;
    pub fn HPDF_InsertPage(pdf: HPDF_Doc, page: HPDF_Page) -> HPDF_Page;
    pub fn HPDF_Page_SetWidth(page: HPDF_Page, value: HPDF_REAL)
     -> HPDF_STATUS;
    pub fn HPDF_Page_SetHeight(page: HPDF_Page, value: HPDF_REAL)
     -> HPDF_STATUS;
    pub fn HPDF_Page_SetSize(page: HPDF_Page, size: HPDF_PageSizes,
                             direction: HPDF_PageDirection) -> HPDF_STATUS;
    pub fn HPDF_Page_SetRotate(page: HPDF_Page, angle: HPDF_UINT16)
     -> HPDF_STATUS;
    pub fn HPDF_Page_SetZoom(page: HPDF_Page, zoom: HPDF_REAL) -> HPDF_STATUS;
    pub fn HPDF_GetFont(pdf: HPDF_Doc,
                        font_name: *const ::std::os::raw::c_char,
                        encoding_name: *const ::std::os::raw::c_char)
     -> HPDF_Font;
    pub fn HPDF_LoadType1FontFromFile(pdf: HPDF_Doc,
                                      afm_file_name:
                                          *const ::std::os::raw::c_char,
                                      data_file_name:
                                          *const ::std::os::raw::c_char)
     -> *const ::std::os::raw::c_char;
    pub fn HPDF_GetTTFontDefFromFile(pdf: HPDF_Doc,
                                     file_name: *const ::std::os::raw::c_char,
                                     embedding: HPDF_BOOL) -> HPDF_FontDef;
    pub fn HPDF_LoadTTFontFromFile(pdf: HPDF_Doc,
                                   file_name: *const ::std::os::raw::c_char,
                                   embedding: HPDF_BOOL)
     -> *const ::std::os::raw::c_char;
    pub fn HPDF_LoadTTFontFromFile2(pdf: HPDF_Doc,
                                    file_name: *const ::std::os::raw::c_char,
                                    index: HPDF_UINT, embedding: HPDF_BOOL)
     -> *const ::std::os::raw::c_char;
    pub fn HPDF_AddPageLabel(pdf: HPDF_Doc, page_num: HPDF_UINT,
                             style: HPDF_PageNumStyle, first_page: HPDF_UINT,
                             prefix: *const ::std::os::raw::c_char)
     -> HPDF_STATUS;
    pub fn HPDF_UseJPFonts(pdf: HPDF_Doc) -> HPDF_STATUS;
    pub fn HPDF_UseKRFonts(pdf: HPDF_Doc) -> HPDF_STATUS;
    pub fn HPDF_UseCNSFonts(pdf: HPDF_Doc) -> HPDF_STATUS;
    pub fn HPDF_UseCNTFonts(pdf: HPDF_Doc) -> HPDF_STATUS;
    pub fn HPDF_CreateOutline(pdf: HPDF_Doc, parent: HPDF_Outline,
                              title: *const ::std::os::raw::c_char,
                              encoder: HPDF_Encoder) -> HPDF_Outline;
    pub fn HPDF_Outline_SetOpened(outline: HPDF_Outline, opened: HPDF_BOOL)
     -> HPDF_STATUS;
    pub fn HPDF_Outline_SetDestination(outline: HPDF_Outline,
                                       dst: HPDF_Destination) -> HPDF_STATUS;
    pub fn HPDF_Page_CreateDestination(page: HPDF_Page) -> HPDF_Destination;
    pub fn HPDF_Destination_SetXYZ(dst: HPDF_Destination, left: HPDF_REAL,
                                   top: HPDF_REAL, zoom: HPDF_REAL)
     -> HPDF_STATUS;
    pub fn HPDF_Destination_SetFit(dst: HPDF_Destination) -> HPDF_STATUS;
    pub fn HPDF_Destination_SetFitH(dst: HPDF_Destination, top: HPDF_REAL)
     -> HPDF_STATUS;
    pub fn HPDF_Destination_SetFitV(dst: HPDF_Destination, left: HPDF_REAL)
     -> HPDF_STATUS;
    pub fn HPDF_Destination_SetFitR(dst: HPDF_Destination, left: HPDF_REAL,
                                    bottom: HPDF_REAL, right: HPDF_REAL,
                                    top: HPDF_REAL) -> HPDF_STATUS;
    pub fn HPDF_Destination_SetFitB(dst: HPDF_Destination) -> HPDF_STATUS;
    pub fn HPDF_Destination_SetFitBH(dst: HPDF_Destination, top: HPDF_REAL)
     -> HPDF_STATUS;
    pub fn HPDF_Destination_SetFitBV(dst: HPDF_Destination, left: HPDF_REAL)
     -> HPDF_STATUS;
    pub fn HPDF_GetEncoder(pdf: HPDF_Doc,
                           encoding_name: *const ::std::os::raw::c_char)
     -> HPDF_Encoder;
    pub fn HPDF_GetCurrentEncoder(pdf: HPDF_Doc) -> HPDF_Encoder;
    pub fn HPDF_SetCurrentEncoder(pdf: HPDF_Doc,
                                  encoding_name:
                                      *const ::std::os::raw::c_char)
     -> HPDF_STATUS;
    pub fn HPDF_Encoder_GetType(encoder: HPDF_Encoder) -> HPDF_EncoderType;
    pub fn HPDF_Encoder_GetByteType(encoder: HPDF_Encoder,
                                    text: *const ::std::os::raw::c_char,
                                    index: HPDF_UINT) -> HPDF_ByteType;
    pub fn HPDF_Encoder_GetUnicode(encoder: HPDF_Encoder, code: HPDF_UINT16)
     -> HPDF_UNICODE;
    pub fn HPDF_Encoder_GetWritingMode(encoder: HPDF_Encoder)
     -> HPDF_WritingMode;
    pub fn HPDF_UseJPEncodings(pdf: HPDF_Doc) -> HPDF_STATUS;
    pub fn HPDF_UseKREncodings(pdf: HPDF_Doc) -> HPDF_STATUS;
    pub fn HPDF_UseCNSEncodings(pdf: HPDF_Doc) -> HPDF_STATUS;
    pub fn HPDF_UseCNTEncodings(pdf: HPDF_Doc) -> HPDF_STATUS;
    pub fn HPDF_UseUTFEncodings(pdf: HPDF_Doc) -> HPDF_STATUS;
    pub fn HPDF_Page_CreateXObjectFromImage(pdf: HPDF_Doc, page: HPDF_Page,
                                            rect: HPDF_Rect,
                                            image: HPDF_Image,
                                            zoom: HPDF_Boolean)
     -> HPDF_XObject;
    pub fn HPDF_Page_CreateXObjectAsWhiteRect(pdf: HPDF_Doc, page: HPDF_Page,
                                              rect: HPDF_Rect)
     -> HPDF_XObject;
    pub fn HPDF_Page_Create3DAnnot(page: HPDF_Page, rect: HPDF_Rect,
                                   tb: HPDF_BOOL, np: HPDF_BOOL,
                                   u3d: HPDF_U3D, ap: HPDF_Image)
     -> HPDF_Annotation;
    pub fn HPDF_Page_CreateTextAnnot(page: HPDF_Page, rect: HPDF_Rect,
                                     text: *const ::std::os::raw::c_char,
                                     encoder: HPDF_Encoder)
     -> HPDF_Annotation;
    pub fn HPDF_Page_CreateFreeTextAnnot(page: HPDF_Page, rect: HPDF_Rect,
                                         text: *const ::std::os::raw::c_char,
                                         encoder: HPDF_Encoder)
     -> HPDF_Annotation;
    pub fn HPDF_Page_CreateLineAnnot(page: HPDF_Page,
                                     text: *const ::std::os::raw::c_char,
                                     encoder: HPDF_Encoder)
     -> HPDF_Annotation;
    pub fn HPDF_Page_CreateWidgetAnnot_WhiteOnlyWhilePrint(pdf: HPDF_Doc,
                                                           page: HPDF_Page,
                                                           rect: HPDF_Rect)
     -> HPDF_Annotation;
    pub fn HPDF_Page_CreateWidgetAnnot(page: HPDF_Page, rect: HPDF_Rect)
     -> HPDF_Annotation;
    pub fn HPDF_Page_CreateLinkAnnot(page: HPDF_Page, rect: HPDF_Rect,
                                     dst: HPDF_Destination)
     -> HPDF_Annotation;
    pub fn HPDF_Page_CreateURILinkAnnot(page: HPDF_Page, rect: HPDF_Rect,
                                        uri: *const ::std::os::raw::c_char)
     -> HPDF_Annotation;
    pub fn HPDF_Page_CreateTextMarkupAnnot(page: HPDF_Page, rect: HPDF_Rect,
                                           text:
                                               *const ::std::os::raw::c_char,
                                           encoder: HPDF_Encoder,
                                           subType: HPDF_AnnotType)
     -> HPDF_Annotation;
    pub fn HPDF_Page_CreateHighlightAnnot(page: HPDF_Page, rect: HPDF_Rect,
                                          text: *const ::std::os::raw::c_char,
                                          encoder: HPDF_Encoder)
     -> HPDF_Annotation;
    pub fn HPDF_Page_CreateUnderlineAnnot(page: HPDF_Page, rect: HPDF_Rect,
                                          text: *const ::std::os::raw::c_char,
                                          encoder: HPDF_Encoder)
     -> HPDF_Annotation;
    pub fn HPDF_Page_CreateSquigglyAnnot(page: HPDF_Page, rect: HPDF_Rect,
                                         text: *const ::std::os::raw::c_char,
                                         encoder: HPDF_Encoder)
     -> HPDF_Annotation;
    pub fn HPDF_Page_CreateStrikeOutAnnot(page: HPDF_Page, rect: HPDF_Rect,
                                          text: *const ::std::os::raw::c_char,
                                          encoder: HPDF_Encoder)
     -> HPDF_Annotation;
    pub fn HPDF_Page_CreatePopupAnnot(page: HPDF_Page, rect: HPDF_Rect,
                                      parent: HPDF_Annotation)
     -> HPDF_Annotation;
    pub fn HPDF_Page_CreateStampAnnot(page: HPDF_Page, rect: HPDF_Rect,
                                      name: HPDF_StampAnnotName,
                                      text: *const ::std::os::raw::c_char,
                                      encoder: HPDF_Encoder)
     -> HPDF_Annotation;
    pub fn HPDF_Page_CreateProjectionAnnot(page: HPDF_Page, rect: HPDF_Rect,
                                           text:
                                               *const ::std::os::raw::c_char,
                                           encoder: HPDF_Encoder)
     -> HPDF_Annotation;
    pub fn HPDF_Page_CreateSquareAnnot(page: HPDF_Page, rect: HPDF_Rect,
                                       text: *const ::std::os::raw::c_char,
                                       encoder: HPDF_Encoder)
     -> HPDF_Annotation;
    pub fn HPDF_Page_CreateCircleAnnot(page: HPDF_Page, rect: HPDF_Rect,
                                       text: *const ::std::os::raw::c_char,
                                       encoder: HPDF_Encoder)
     -> HPDF_Annotation;
    pub fn HPDF_LinkAnnot_SetHighlightMode(annot: HPDF_Annotation,
                                           mode: HPDF_AnnotHighlightMode)
     -> HPDF_STATUS;
    pub fn HPDF_LinkAnnot_SetJavaScript(annot: HPDF_Annotation,
                                        javascript: HPDF_JavaScript)
     -> HPDF_STATUS;
    pub fn HPDF_LinkAnnot_SetBorderStyle(annot: HPDF_Annotation,
                                         width: HPDF_REAL,
                                         dash_on: HPDF_UINT16,
                                         dash_off: HPDF_UINT16)
     -> HPDF_STATUS;
    pub fn HPDF_TextAnnot_SetIcon(annot: HPDF_Annotation,
                                  icon: HPDF_AnnotIcon) -> HPDF_STATUS;
    pub fn HPDF_TextAnnot_SetOpened(annot: HPDF_Annotation, opened: HPDF_BOOL)
     -> HPDF_STATUS;
    pub fn HPDF_Annot_SetRGBColor(annot: HPDF_Annotation,
                                  color: HPDF_RGBColor) -> HPDF_STATUS;
    pub fn HPDF_Annot_SetCMYKColor(annot: HPDF_Annotation,
                                   color: HPDF_CMYKColor) -> HPDF_STATUS;
    pub fn HPDF_Annot_SetGrayColor(annot: HPDF_Annotation, color: HPDF_REAL)
     -> HPDF_STATUS;
    pub fn HPDF_Annot_SetNoColor(annot: HPDF_Annotation) -> HPDF_STATUS;
    pub fn HPDF_MarkupAnnot_SetTitle(annot: HPDF_Annotation,
                                     name: *const ::std::os::raw::c_char)
     -> HPDF_STATUS;
    pub fn HPDF_MarkupAnnot_SetSubject(annot: HPDF_Annotation,
                                       name: *const ::std::os::raw::c_char)
     -> HPDF_STATUS;
